<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fundo"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/username_editText_register"
        android:layout_width="379dp"
        android:layout_height="50dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/select_photo_button" />

    <EditText
        android:id="@+id/email_editText_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:autofillHints=""
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="@+id/username_editText_register"
        app:layout_constraintStart_toStartOf="@+id/username_editText_register"
        app:layout_constraintTop_toBottomOf="@+id/username_editText_register" />

    <EditText
        android:id="@+id/password_editText_register"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext_register_login"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        app:layout_constraintEnd_toEndOf="@+id/username_editText_register"
        app:layout_constraintStart_toStartOf="@+id/username_editText_register"
        app:layout_constraintTop_toBottomOf="@+id/email_editText_register" />

    <Button
        android:id="@+id/register_button_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/register"
        android:textStyle="bold"
        app:backgroundTint="@color/fundo_botao"
        app:layout_constraintEnd_toEndOf="@+id/password_editText_register"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password_editText_register"
        app:layout_constraintTop_toBottomOf="@+id/password_editText_register" />

    <TextView
        android:id="@+id/haveAccount_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/already_have_an_account"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/register_button_register"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/register_button_register"
        app:layout_constraintTop_toBottomOf="@+id/register_button_register" />

    <Button
        android:id="@+id/select_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_select_photo"
        android:text="Select Photo"
        app:backgroundTint="@color/fundo_botao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>